<resources>
    <string name="app_name">I Love Children</string>
    <string name="title_home">Home</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="sync">Sync</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_fb">Sign in with Facebook</string>
    <string name="already_have_an_account">Already have an account?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="height_units">
        <item>cm</item>
        <item>inches</item>
    </string-array>
    <string-array name="weight_units">
        <item>kg</item>
        <item>lbs</item>
    </string-array>
    <string-array name="distance_units">
        <item>km</item>
        <item>miles</item>
    </string-array>

</resources>