<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/background_login"
    tools:context="vn.edu.usth.ilovechildren.ui.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="373dp"
            android:layout_height="254dp"
            android:layout_gravity=""
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="60dp"
            android:src="@drawable/login_image_nobackground"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/login_with_google"
                android:layout_width="355dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:padding="16dp"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="@color/coconut">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:background="@color/coconut"
                        android:contentDescription="google"
                        android:src="@drawable/ic_google" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/sign_in_with_google"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/graphite"
                        android:textStyle="bold" />

                </FrameLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/login_with_facebook"
                android:layout_width="355dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:padding="16dp"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="@color/coconut">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:background="@color/coconut"
                        android:src="@drawable/ic_facebook"
                        android:contentDescription="Facebook"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/sign_in_with_fb"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/graphite"
                        android:textStyle="bold" />

                </FrameLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Sync_btn"
                android:layout_width="355dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textStyle="bold"
                android:backgroundTint="@color/sync"
                android:backgroundTintMode="src_over"
                android:text="@string/sync"
                android:padding="16dp"
                app:cornerRadius="16dp" />

        </LinearLayout>

        <!--    <LinearLayout-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:orientation="horizontal"-->
        <!--        android:gravity="center">-->

        <!--        <TextView-->
        <!--            android:id="@+id/already_have"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/already_have_an_account"-->
        <!--            android:textAppearance="@style/TextAppearance.AppCompat.Body2"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:textStyle="bold"/>-->

        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/sign_in"-->
        <!--            android:textColor="@color/dropbox_blue"-->
        <!--            android:layout_marginStart="4dp"-->
        <!--            android:textAppearance="@style/TextAppearance.AppCompat.Body2"-->
        <!--            android:textStyle="bold"-->
        <!--            android:id="@+id/sign_in"/>-->
    </LinearLayout>


</ScrollView>
